pxc/tests/test_003_interface/interf_byval_fixme.px
namespace interf_byval_fixme;
import common -;

interface ifoo {
}

struct foo : ifoo : {
  int x;
}

function void f1(ifoo x) // error: passing interface by value
{
}

foo v;
f1(v);
